--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "myobsplugins",
-	"name": "myobsplugins",
+	"id": "obshubo",
+	"name": "obshugo",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "hugo helper.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"author": "tignioj",
+	"authorUrl": "https://github.com/tignioj",
 	"fundingUrl": "https://obsidian.md/pricing",
 	"isDesktopOnly": false
 }
