--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "hugo-helper",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "hugo博客文档小助手，用于快捷创建文章、自动修改标题，分类，最后修改时间信息",
+	"description": "用于快捷创建hugo文章、自动修改标题，分类，最后修改时间信息",
 	"author": "tignioj",
 	"authorUrl": "https://github.com/tignioj",
 	"isDesktopOnly": false
