清单中的name属性应该使用驼峰命名且不能出现`-`符号。版本号更新到1.0.5 clearTime因为不兼容手机，修改为windows.clearTimeout; 空属性检测；

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"id": "hugo-helper",
-	"name": "hugo-helper",
-	"version": "1.0.4",
+	"name": "HugoHelper",
+	"version": "1.0.5",
 	"minAppVersion": "0.15.0",
 	"description": "用于快捷创建hugo文章、自动修改标题，分类，最后修改时间信息。",
 	"author": "tignioj",
